--- a/pages/1289.html
+++ b/pages/1289.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8623/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -559,7 +558,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
 </li>
 </ul>
 </div>
@@ -570,8 +569,8 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#examples_2'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <strong>coreflective subcategory</strong> is a <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a> whose inclusion functor has a <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right adjoint</a> <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> (a <a class='existingWikiWord' href='/nlab/show/free+functor'>cofree functor</a>):</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mover><munder><mo>←</mo><mi>R</mi></munder><mover><mo>↪</mo><mi>i</mi></mover></mover><mi>D</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>A <strong>coreflective subcategory</strong> is a <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a> whose inclusion functor has a <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right adjoint</a> <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> (a <a class='existingWikiWord' href='/nlab/show/free+functor'>cofree functor</a>):</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mover><munder><mo>←</mo><mi>R</mi></munder><mover><mo>↪</mo><mi>i</mi></mover></mover><mi>D</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   C \stackrel{\overset{i}{\hookrightarrow}}{\underset{R}{\leftarrow}} D
   \,.
 
@@ -585,7 +584,7 @@ margin-left: 0em;
 
 <p><a class='existingWikiWord' href='/nlab/show/Vop%C4%9Bnka%27s+principle'>Vopěnka&#39;s principle</a> is equivalent to the statement:</p>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/locally+presentable+category'>locally presentable category</a>, every <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a> <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>↪</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>D \hookrightarrow C</annotation></semantics></math> which is closed under <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a>s is a <a class='existingWikiWord' href='/nlab/show/coreflective+subcategory'>coreflective subcategory</a>.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/locally+presentable+category'>locally presentable category</a>, every <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a> <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>↪</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>D \hookrightarrow C</annotation></semantics></math> which is closed under <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a>s is a <a class='existingWikiWord' href='/nlab/show/coreflective+subcategory'>coreflective subcategory</a>.</p>
 </div>
 
 <p>This is (<a href='#AdamekRosicky'>AdamekRosicky, theorem 6.28</a>).</p>
@@ -606,11 +605,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a>, which constructs a <a class='existingWikiWord' href='/nlab/show/simply+connected+space'>simply connected</a> <a class='existingWikiWord' href='/nlab/show/Lie+group'>Lie group</a> from a finite-dimensional real <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>. The coreflector is Lie differentiation (taking a Lie group to its associated Lie algebra), and the <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>counit</a> is the natural map to a given Lie group <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> from the universal <a class='existingWikiWord' href='/nlab/show/covering+space'>covering space</a> of the <a class='existingWikiWord' href='/nlab/show/connected+space'>connected component</a> at the identity of <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a>, which constructs a <a class='existingWikiWord' href='/nlab/show/simply+connected+space'>simply connected</a> <a class='existingWikiWord' href='/nlab/show/Lie+group'>Lie group</a> from a finite-dimensional real <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>. The coreflector is Lie differentiation (taking a Lie group to its associated Lie algebra), and the <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>counit</a> is the natural map to a given Lie group <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> from the universal <a class='existingWikiWord' href='/nlab/show/covering+space'>covering space</a> of the <a class='existingWikiWord' href='/nlab/show/connected+space'>connected component</a> at the identity of <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p>
 </li>
 
 <li>
-<p>In a <a class='existingWikiWord' href='/nlab/show/recollement'>recollement</a> situation, we have several reflectors and coreflectors. We have a reflective and coreflective subcategory <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>i</mi> <mo>*</mo></msub><mo>:</mo><mi>A</mi><mo>′</mo><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>i_*: A&#39; \hookrightarrow A</annotation></semantics></math> with reflector <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>i</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>i^*</annotation></semantics></math> and coreflector <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>i</mi> <mo>!</mo></msup></mrow><annotation encoding='application/x-tex'>i^!</annotation></semantics></math>. The functor <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>j</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>j^*</annotation></semantics></math> is both a reflector for the reflective subcategory <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>j</mi> <mo>*</mo></msub><mo>:</mo><mi>A</mi><mo>″</mo><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>j_*: A&#39;&#39; \hookrightarrow A</annotation></semantics></math>, and a coreflector for the coreflective subcategory <math class='maruku-mathml' display='inline' id='mathml_add5eda698f327b6dd28d2f98cd06ce258e47f56_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>j</mi> <mo>!</mo></msub><mo>:</mo><mi>A</mi><mo>″</mo><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>j_!: A&#39;&#39; \hookrightarrow A</annotation></semantics></math>.</p>
+<p>In a <a class='existingWikiWord' href='/nlab/show/recollement'>recollement</a> situation, we have several reflectors and coreflectors. We have a reflective and coreflective subcategory <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>i</mi> <mo>*</mo></msub><mo>:</mo><mi>A</mi><mo>′</mo><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>i_*: A&#39; \hookrightarrow A</annotation></semantics></math> with reflector <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>i</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>i^*</annotation></semantics></math> and coreflector <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>i</mi> <mo>!</mo></msup></mrow><annotation encoding='application/x-tex'>i^!</annotation></semantics></math>. The functor <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>j</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>j^*</annotation></semantics></math> is both a reflector for the reflective subcategory <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>j</mi> <mo>*</mo></msub><mo>:</mo><mi>A</mi><mo>″</mo><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>j_*: A&#39;&#39; \hookrightarrow A</annotation></semantics></math>, and a coreflector for the coreflective subcategory <math class='maruku-mathml' display='inline' id='mathml_cb2909688485f09106641ea803b5b9d7cf98146b_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>j</mi> <mo>!</mo></msub><mo>:</mo><mi>A</mi><mo>″</mo><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>j_!: A&#39;&#39; \hookrightarrow A</annotation></semantics></math>.</p>
 </li>
 </ul>
 
@@ -630,22 +629,29 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+ 
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on April 20, 2017 21:24:56 
-  by <a class="existingWikiWord" href="/nlab/show/Bartek">Bartek</a>
-  (130.216.54.148)
+  <p>
+  Last revised on June 14, 2018 at 15:08:19.
+  See the <a href="https://ncatlab.org/nlab/history/coreflective subcategory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coreflective+subcategory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coreflective+subcategory/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/coreflective+subcategory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coreflective+subcategory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/coreflective+subcategory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coreflective+subcategory/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/coreflective+subcategory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coreflective+subcategory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/coreflective subcategory/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/coreflective+subcategory" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/coreflective+subcategory" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/coreflective+subcategory" id="view_source" rel="nofollow">Source</a>
