--- a/pages/5050.html
+++ b/pages/5050.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8636/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -495,14 +494,14 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> is a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> that is locally isomorphic to a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_b8a5e77099a5003ed0eae9582d2d92e05db706c2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> is a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> that is locally isomorphic to a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_d6b35e3d81c9b1058e6a53597bd8924a0697821a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>.</p>
 
-<p>A <strong>manifold with <a class='existingWikiWord' href='/nlab/show/boundary'>boundary</a></strong> is a topological space that is locally isomorphic either to an <math class='maruku-mathml' display='inline' id='mathml_b8a5e77099a5003ed0eae9582d2d92e05db706c2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> or to a <strong>half-space</strong> <math class='maruku-mathml' display='inline' id='mathml_b8a5e77099a5003ed0eae9582d2d92e05db706c2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>H</mi> <mi>n</mi></msup><mo>=</mo><mo stretchy='false'>{</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>|</mo><msup><mi>x</mi> <mi>n</mi></msup><mo>≥</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>H^n = \{ \vec x \in \mathbb{R}^n | x^n \geq 0\}</annotation></semantics></math>.</p>
+<p>A <strong>manifold with <a class='existingWikiWord' href='/nlab/show/boundary'>boundary</a></strong> is a topological space that is locally isomorphic either to an <math class='maruku-mathml' display='inline' id='mathml_d6b35e3d81c9b1058e6a53597bd8924a0697821a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> or to a <strong>half-space</strong> <math class='maruku-mathml' display='inline' id='mathml_d6b35e3d81c9b1058e6a53597bd8924a0697821a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>H</mi> <mi>n</mi></msup><mo>=</mo><mo stretchy='false'>{</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>|</mo><msup><mi>x</mi> <mi>n</mi></msup><mo>≥</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>H^n = \{ \vec x \in \mathbb{R}^n | x^n \geq 0\}</annotation></semantics></math>.</p>
 
-<p>A <strong>manifold with corners</strong> is a topological space that is locally isomorphic to an <math class='maruku-mathml' display='inline' id='mathml_b8a5e77099a5003ed0eae9582d2d92e05db706c2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>H</mi> <mi>i</mi> <mi>n</mi></msubsup><mo>=</mo><mo stretchy='false'>{</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>|</mo><msup><mi>x</mi> <mi>i</mi></msup><mo>,</mo><msup><mi>x</mi> <mrow><mi>i</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>,</mo><mi>⋯</mi><mo>,</mo><msup><mi>x</mi> <mi>n</mi></msup><mo>≥</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>H^n_i = \{ \vec x \in \mathbb{R}^n | x^i , x^{i+1}, \cdots, x^n \geq 0\}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_b8a5e77099a5003ed0eae9582d2d92e05db706c2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>0 \leq i \leq n</annotation></semantics></math>.</p>
+<p>A <strong>manifold with corners</strong> is a topological space that is locally isomorphic to an <math class='maruku-mathml' display='inline' id='mathml_d6b35e3d81c9b1058e6a53597bd8924a0697821a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>H</mi> <mi>i</mi> <mi>n</mi></msubsup><mo>=</mo><mo stretchy='false'>{</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>|</mo><msup><mi>x</mi> <mi>i</mi></msup><mo>,</mo><msup><mi>x</mi> <mrow><mi>i</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>,</mo><mi>⋯</mi><mo>,</mo><msup><mi>x</mi> <mi>n</mi></msup><mo>≥</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>H^n_i = \{ \vec x \in \mathbb{R}^n | x^i , x^{i+1}, \cdots, x^n \geq 0\}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_d6b35e3d81c9b1058e6a53597bd8924a0697821a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>0 \leq i \leq n</annotation></semantics></math>.</p>
 
 <p>For details see <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a>.</p>
 
@@ -512,16 +511,33 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/closed+manifold'>closed manifold</a></li>
 </ul>
 
+<h2 id='properties'>Properties</h2>
+
+<div class='num_prop' id='SmoothManifoldsWithBoundaryEmbedIntoDiffeologicalSpaces'>
+<h6 id='proposition'>Proposition</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/manifold+with+boundary'>manifolds with boundary</a> form <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a> of <a class='existingWikiWord' href='/nlab/show/diffeological+space'>diffeological spaces</a>)</strong></p>
+
+<p>The evident <a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d6b35e3d81c9b1058e6a53597bd8924a0697821a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SmthMfdWBdr</mi><mover><mo>↪</mo><mphantom><mi>AAAA</mi></mphantom></mover><mi>DiffeologicalSpaces</mi></mrow><annotation encoding='application/x-tex'>
+  SmthMfdWBdr \overset{\phantom{AAAA}}{\hookrightarrow} DiffeologicalSpaces
+
+</annotation></semantics></math></div>
+<p>from the <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth</a> <a class='existingWikiWord' href='/nlab/show/manifold+with+boundary'>manifolds with boundary</a> to that of <a class='existingWikiWord' href='/nlab/show/diffeological+space'>diffeological spaces</a> is <a class='existingWikiWord' href='/nlab/show/full+and+faithful+functor'>fully faithful</a>, hence is a <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a>-embedding.</p>
+</div>
+
+<p>This is discussed in <a href='#IgresiasZemmour13'>Igresias-Zemmour13, 4.16</a></p>
+
 <h2 id='references'>References</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Dominic+Joyce'>Dominic Joyce</a>, <em>On manifolds with corners</em> (<a href='http://arxiv.org/abs/0910.3518'>arXiv:0910.3518</a>)</li>
 </ul>
 
-<p>Discussion in the context of <a class='existingWikiWord' href='/nlab/show/synthetic+differential+geometry'>synthetic differential geometry</a> realized in the <a class='existingWikiWord' href='/nlab/show/Cahiers+topos'>Cahiers topos</a> is in</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a>-embedding of manifolds with boundary into that of <a class='existingWikiWord' href='/nlab/show/diffeological+space'>diffeological spaces</a> is discussed in</p>
 
 <ul>
-<li id='Schlegel15'><a class='existingWikiWord' href='/nlab/show/Vincent+Schlegel'>Vincent Schlegel</a>, <em>Gluing Manifolds in the Cahiers Topos</em> (<a href='http://arxiv.org/abs/1503.07408'>arXiv:1503.07408</a>)</li>
+<li id='IgresiasZemmour13'><a class='existingWikiWord' href='/nlab/show/Patrick+Iglesias-Zemmour'>Patrick Iglesias-Zemmour</a>, section 4.16 of <em>Diffeology</em>, Mathematical Surveys and Monographs, AMS (2013) (<a href='http://math.huji.ac.il/~piz/Site/The%20Book.html'>web</a>, <a href='http://www.ams.org/bookstore-getitem/item=SURV-185'>publisher</a>)</li>
 </ul>
 
 <p>
@@ -533,19 +549,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 29, 2015 20:02:59 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  <p>
+  Last revised on June 18, 2018 at 07:59:41.
+  See the <a href="https://ncatlab.org/nlab/history/manifold with boundary" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/manifold+with+boundary" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/manifold+with+boundary/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/manifold+with+boundary" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/manifold+with+boundary" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/manifold+with+boundary" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/manifold+with+boundary/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/manifold+with+boundary" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/manifold+with+boundary" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/manifold with boundary/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/manifold+with+boundary" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/manifold+with+boundary" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/manifold+with+boundary" id="view_source" rel="nofollow">Source</a>
